--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>AutocompleteJs</title>
-    <link rel="stylesheet" href="build/css/AutocompleteJs.css">
+    <title>autocomplete</title>
+    <link rel="stylesheet" href="build/css/autocomplete.css">
   </head>
   <body>
 
@@ -12,7 +12,7 @@
     </div>
 
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="./build/js/AutocompleteJs.js"></script>
+    <script src="./build/js/autocomplete.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
